--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 
-/** Aqui le doy la el estilo que quiero que tenga el juego al verlo en pantalla */
+/** Aqui le generamos el estilo que quiero que tenga el juego al verlo en pantalla */
 *{
     padding: 0;
     margin: 0;
