--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 .game{     /** CREAMOS LA CAJA DONDE VA EL JUEGO  **/
     width: 500px;
     height: 200px;
-    border: 1px solid red; /*color de la linea de la caja */
+    border: 1px solid red; /*color de la linea del borde de la caja */
     margin: auto;
 }
 #character{
